--- a/app/src/main/res/layout/activity_all_books.xml
+++ b/app/src/main/res/layout/activity_all_books.xml
@@ -5,7 +5,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".AllBooksActivity" android:background="#86BDD6A0">
+        tools:context=".AllBooksActivity"
+        android:background="#86BDD6A0">
 
 
     <androidx.recyclerview.widget.RecyclerView
