--- a/app/src/main/res/layout/list_item_book.xml
+++ b/app/src/main/res/layout/list_item_book.xml
@@ -2,7 +2,8 @@
 <com.google.android.material.card.MaterialCardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_height="wrap_content"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/pranet"
         app:cardCornerRadius="7dp"
         app:cardElevation="7dp"
@@ -12,21 +13,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <ImageView
+                android:id="@+id/imgBook"
                 android:layout_width="130dp"
                 android:layout_height="150dp"
-                android:id="@+id/imgBook"
-                android:src="@mipmap/ic_launcher"
-        />
+                android:src="@mipmap/ic_launcher"/>
         <TextView
+                android:id="@+id/txtBookName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nazwa książki"
+                android:text="Book Name"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:layout_below="@+id/imgBook"
                 android:layout_centerHorizontal="true"
-                android:layout_margin="7dp"
-                android:id="@+id/txtBookName"
+                android:layout_marginTop="7dp"
         />
 
     </RelativeLayout>
