--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -1,66 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
                                                    android:layout_height="match_parent">
+    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" >
+        <androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent" android:layout_width="match_parent">
+            <ImageView
+                    android:layout_width="200dp"
+                    android:layout_height="200dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imgBook"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+            <Button
+                    android:text="Czytam..."
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/btnAddToCurrentlyReading"
+                    app:layout_constraintTop_toBottomOf="@+id/btnAddToAlreadyReadList"
+                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+            <Button
+                    android:text="Dodaj do listy życzeń"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/btnAddToWantToReadList"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView5"/>
+            <Button
+                    android:text="Przeczytane"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/btnAddToAlreadyReadList"
+                    app:layout_constraintStart_toEndOf="@+id/btnAddToWantToReadList" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.511" app:layout_constraintTop_toBottomOf="@+id/txtPages"/>
+            <Button
+                    android:text="Dodaj do ulubionych"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/btnAddToFavorite"
+                    app:layout_constraintTop_toBottomOf="@+id/btnAddToWantToReadList"
+                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/btnAddToCurrentlyReading"/>
+            <TextView
+                    android:text="Ksiazka:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/textView"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/txtBookName"
+                    app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginTop="15dp"/>
+            <TextView
+                    android:text="nazwa"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/txtBookName"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
+                    app:layout_constraintTop_toBottomOf="@+id/txtDescription" android:layout_marginTop="15dp"/>
+            <TextView
+                    android:text="Autor:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/textView3"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/txtAuthorName"
+                    app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="15dp"/>
+            <TextView
+                    android:text="imie i nazwisko"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/txtAuthorName"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
+                    app:layout_constraintTop_toBottomOf="@+id/txtBookName" android:layout_marginTop="15dp"
+                    app:layout_constraintStart_toEndOf="@+id/textView"/>
+            <TextView
+                    android:text="Pages:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/textView5"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/txtPages"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="15dp"/>
+            <TextView
+                    android:text="liczba"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/txtPages"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
+                    app:layout_constraintTop_toBottomOf="@+id/txtAuthorName" android:layout_marginTop="15dp"/>
+            <TextView
+                    android:text="Opis:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/textView7"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/txtDescription"
+                    app:layout_constraintTop_toBottomOf="@+id/imgBook" android:layout_marginTop="30dp"/>
+            <TextView
+                    android:text="krotki Opis"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/txtDescription"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
+                    app:layout_constraintTop_toBottomOf="@+id/imgBook" android:layout_marginTop="30dp"/>
 
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView"
-            tools:layout_editor_absoluteY="58dp" tools:layout_editor_absoluteX="46dp"/>
-    <Button
-            android:text="Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/button" tools:layout_editor_absoluteY="38dp"
-            tools:layout_editor_absoluteX="265dp"/>
-    <Button
-            android:text="Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/button2" tools:layout_editor_absoluteY="114dp"
-            tools:layout_editor_absoluteX="258dp"/>
-    <Button
-            android:text="Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/button3" tools:layout_editor_absoluteY="184dp"
-            tools:layout_editor_absoluteX="271dp"/>
-    <Button
-            android:text="Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/button4" tools:layout_editor_absoluteY="263dp"
-            tools:layout_editor_absoluteX="280dp"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView" tools:layout_editor_absoluteY="348dp"
-            tools:layout_editor_absoluteX="44dp"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView2" tools:layout_editor_absoluteY="353dp"
-            tools:layout_editor_absoluteX="138dp"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView3" tools:layout_editor_absoluteY="387dp"
-            tools:layout_editor_absoluteX="52dp"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView4" tools:layout_editor_absoluteY="389dp"
-            tools:layout_editor_absoluteX="139dp"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView5" tools:layout_editor_absoluteY="427dp"
-            tools:layout_editor_absoluteX="54dp"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView6" tools:layout_editor_absoluteY="428dp"
-            tools:layout_editor_absoluteX="144dp"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView7" tools:layout_editor_absoluteY="471dp"
-            tools:layout_editor_absoluteX="54dp"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
+
+
+</RelativeLayout>
