--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -4,8 +4,9 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent">
-    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" >
-        <androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent" android:layout_width="match_parent">
+    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
+        <androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
+                                                           android:layout_width="match_parent">
             <ImageView
                     android:layout_width="200dp"
                     android:layout_height="200dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imgBook"
@@ -13,30 +14,34 @@
                     android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
             <Button
-                    android:text="Czytam..."
+                    android:text="Currently Reading"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/btnAddToCurrentlyReading"
                     app:layout_constraintTop_toBottomOf="@+id/btnAddToAlreadyReadList"
                     app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
             <Button
-                    android:text="Dodaj do listy życzeń"
+                    android:text="Want to read"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/btnAddToWantToReadList"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnAddToWantToReadList"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="20dp"
                     app:layout_constraintTop_toBottomOf="@+id/textView5"/>
             <Button
-                    android:text="Przeczytane"
+                    android:text="Already Read"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/btnAddToAlreadyReadList"
-                    app:layout_constraintStart_toEndOf="@+id/btnAddToWantToReadList" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/btnAddToWantToReadList"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.511" app:layout_constraintTop_toBottomOf="@+id/txtPages"/>
             <Button
-                    android:text="Dodaj do ulubionych"
+                    android:text="Add to Favorite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/btnAddToFavorite"
                     app:layout_constraintTop_toBottomOf="@+id/btnAddToWantToReadList"
                     app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/btnAddToCurrentlyReading"/>
+                    app:layout_constraintEnd_toStartOf="@+id/btnAddToCurrentlyReading"
+                    app:layout_constraintHorizontal_bias="0.633" app:layout_constraintVertical_bias="0.0"/>
             <TextView
                     android:text="Ksiazka:"
                     android:layout_width="wrap_content"
@@ -53,7 +58,8 @@
                     android:text="Autor:"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textView3"
-                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/txtAuthorName"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/txtAuthorName"
                     app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="15dp"/>
             <TextView
                     android:text="imie i nazwisko"
@@ -78,7 +84,8 @@
                     android:text="Opis:"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textView7"
-                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/txtDescription"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/txtDescription"
                     app:layout_constraintTop_toBottomOf="@+id/imgBook" android:layout_marginTop="30dp"/>
             <TextView
                     android:text="krotki Opis"
@@ -89,7 +96,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-
 
 
 </RelativeLayout>
