--- a/app/src/main/res/layout/activity_want_to_read.xml
+++ b/app/src/main/res/layout/activity_want_to_read.xml
@@ -10,10 +10,10 @@
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/bookRecView"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/booksRecView"
-            android:layout_margin="10dp"
-    />
+            android:layout_margin="10dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
