--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -4,95 +4,126 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent">
-    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
-        <androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
+    <ScrollView android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout android:layout_height="wrap_content"
                                                            android:layout_width="match_parent">
             <ImageView
                     android:layout_width="200dp"
                     android:layout_height="200dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imgBook"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                    android:layout_marginTop="15dp" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/guideline2"/>
             <Button
-                    android:text="Currently Reading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/btnAddToCurrentlyReading"
-                    app:layout_constraintTop_toBottomOf="@+id/btnAddToAlreadyReadList"
-                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+                    android:text="@string/currently_read"
+                    android:layout_width="150dp"
+                    android:layout_height="75dp" android:id="@+id/btnAddToCurrentlyReading"
+                    android:textAllCaps="false"
+                    app:layout_constraintTop_toTopOf="@+id/guideline5"
+                    app:layout_constraintStart_toStartOf="@+id/guideline4" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
             <Button
-                    android:text="Want to read"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:text="@string/will_read"
+                    android:layout_width="150dp"
+                    android:layout_height="75dp"
                     android:id="@+id/btnAddToWantToReadList"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="20dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView5"/>
+                    android:textAllCaps="false"
+                    app:layout_constraintTop_toTopOf="@+id/guideline"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline4" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/guideline5"/>
             <Button
-                    android:text="Already Read"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/btnAddToAlreadyReadList"
-                    app:layout_constraintStart_toEndOf="@+id/btnAddToWantToReadList"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.511" app:layout_constraintTop_toBottomOf="@+id/txtPages"/>
+                    android:text="@string/already_read"
+                    android:layout_width="150dp"
+                    android:layout_height="75dp" android:id="@+id/btnAddToAlreadyReadList"
+                    android:textAllCaps="false"
+                    app:layout_constraintTop_toTopOf="@+id/guideline"
+                    app:layout_constraintBottom_toTopOf="@+id/guideline5" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/guideline4"/>
             <Button
-                    android:text="Add to Favorite"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/btnAddToFavorite"
-                    app:layout_constraintTop_toBottomOf="@+id/btnAddToWantToReadList"
-                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/btnAddToCurrentlyReading"
-                    app:layout_constraintHorizontal_bias="0.633" app:layout_constraintVertical_bias="0.0"/>
+                    android:text="@string/favorite_book"
+                    android:layout_width="150dp"
+                    android:layout_height="75dp" android:id="@+id/btnAddToFavorite"
+                    android:textAllCaps="false"
+                    app:layout_constraintTop_toTopOf="@+id/guideline5" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline4" app:layout_constraintStart_toStartOf="parent"/>
             <TextView
                     android:text="Ksiazka:"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textView"
-                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/txtBookName"
-                    app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginTop="15dp"/>
+                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                    app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginTop="10dp"/>
             <TextView
                     android:text="nazwa"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/txtBookName"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
-                    app:layout_constraintTop_toBottomOf="@+id/txtDescription" android:layout_marginTop="15dp"/>
+                    app:layout_constraintStart_toEndOf="@+id/textView"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtDescription" android:layout_marginTop="10dp"/>
             <TextView
                     android:text="Autor:"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textView3"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/txtAuthorName"
-                    app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="15dp"/>
+                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                    app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="10dp"/>
             <TextView
-                    android:text="imie i nazwisko"
+                    android:text="nazwisko"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/txtAuthorName"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
-                    app:layout_constraintTop_toBottomOf="@+id/txtBookName" android:layout_marginTop="15dp"
-                    app:layout_constraintStart_toEndOf="@+id/textView"/>
+                    app:layout_constraintStart_toStartOf="@+id/guideline3" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.502"
+                    app:layout_constraintTop_toBottomOf="@+id/txtBookName" android:layout_marginTop="10dp"/>
             <TextView
-                    android:text="Pages:"
+                    android:text="Liczba stron:"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textView5"
-                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/txtPages"
-                    app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="15dp"/>
+                    app:layout_constraintTop_toBottomOf="@+id/textView3"
+                    android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline3"/>
             <TextView
                     android:text="liczba"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/txtPages"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
-                    app:layout_constraintTop_toBottomOf="@+id/txtAuthorName" android:layout_marginTop="15dp"/>
+                    app:layout_constraintStart_toEndOf="@+id/textView5" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.503"
+                    app:layout_constraintTop_toBottomOf="@+id/txtAuthorName" android:layout_marginTop="10dp"/>
             <TextView
                     android:text="Opis:"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textView7"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/txtDescription"
-                    app:layout_constraintTop_toBottomOf="@+id/imgBook" android:layout_marginTop="30dp"/>
+                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                    app:layout_constraintTop_toTopOf="@+id/guideline2" android:layout_marginTop="10dp"/>
             <TextView
                     android:text="krotki Opis"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/txtDescription"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
-                    app:layout_constraintTop_toBottomOf="@+id/imgBook" android:layout_marginTop="30dp"/>
+                    app:layout_constraintStart_toEndOf="@+id/textView7"
+                    app:layout_constraintTop_toTopOf="@+id/guideline2" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="10dp"/>
+            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
+                                                        android:layout_height="wrap_content" android:id="@+id/guideline"
+                                                        app:layout_constraintGuide_begin="389dp"
+                                                        android:orientation="horizontal"/>
+            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
+                                                        android:layout_height="wrap_content"
+                                                        android:id="@+id/guideline2"
+                                                        app:layout_constraintGuide_begin="243dp"
+                                                        android:orientation="horizontal"/>
+            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
+                                                        android:layout_height="wrap_content"
+                                                        android:id="@+id/guideline3"
+                                                        app:layout_constraintGuide_begin="96dp"
+                                                        android:orientation="vertical"/>
+            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
+                                                        android:layout_height="wrap_content"
+                                                        android:id="@+id/guideline4"
+                                                        app:layout_constraintGuide_begin="187dp"
+                                                        android:orientation="vertical"/>
+            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
+                                                        android:layout_height="wrap_content"
+                                                        android:id="@+id/guideline5"
+                                                        app:layout_constraintGuide_begin="506dp"
+                                                        android:orientation="horizontal"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
