--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,91 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity" android:background="#FAFFCC">
-    <TextView
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
+                                                   tools:context=".MainActivity">
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Biblioteka"
-            android:id="@+id/txtName"
-            app:layout_constraintTop_toBottomOf="@+id/imgLogo" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="5dp"
-            android:fontFamily="@font/alex_brush" android:textSize="30sp"/>
-    <Button
-            android:text="@string/activity_all_books"
-            android:layout_width="360dp"
-            android:layout_height="50dp"
-            android:id="@+id/btnAllBooks"
-            android:textAllCaps="false"
-            app:layout_constraintTop_toBottomOf="@+id/txtName"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="28dp"
+            android:layout_marginRight="28dp"
+            android:layout_marginBottom="28dp"
+            android:clickable="true"
+            android:focusable="true"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp" android:background="@color/colorAccent"
-            android:backgroundTint="#9ADF4A" app:layout_constraintHorizontal_bias="0.48"/>
-    <Button
-            android:text="Czytaj dalej..."
-            android:layout_width="360dp"
-            android:layout_height="50dp"
-            android:id="@+id/btnCurrentlyReading"
-            android:textAllCaps="false" app:layout_constraintEnd_toEndOf="@+id/btnAllBooks"
-            app:layout_constraintStart_toStartOf="@+id/btnAllBooks"
-            app:layout_constraintTop_toBottomOf="@+id/btnAllBooks" android:layout_marginTop="5dp"
-            android:backgroundTint="#9ADF4A"/>
-    <Button
-            android:text="Przeczytane"
-            android:layout_width="360dp"
-            android:layout_height="50dp"
-            android:id="@+id/btnAlreadyRead"
-            android:textAllCaps="false" app:layout_constraintEnd_toEndOf="@+id/btnCurrentlyReading"
-            app:layout_constraintStart_toStartOf="@+id/btnCurrentlyReading"
-            app:layout_constraintTop_toBottomOf="@+id/btnCurrentlyReading" android:layout_marginTop="5dp"
-            android:backgroundTint="#9ADF4A"/>
-    <Button
-            android:text="Chcę..."
-            android:layout_width="360dp"
-            android:layout_height="50dp"
-            android:id="@+id/btnWantToRead"
-            android:textAllCaps="false" app:layout_constraintStart_toStartOf="@+id/btnAlreadyRead"
-            app:layout_constraintEnd_toEndOf="@+id/btnAlreadyRead"
-            app:layout_constraintTop_toBottomOf="@+id/btnAlreadyRead" android:layout_marginTop="5dp"
-            android:backgroundTint="#9ADF4A"/>
-    <Button
-            android:text="Ulubione książki"
-            android:layout_width="360dp"
-            android:layout_height="50dp"
-            android:id="@+id/btnFavorite"
-            android:textAllCaps="false" app:layout_constraintStart_toStartOf="@+id/btnWantToRead"
-            app:layout_constraintEnd_toEndOf="@+id/btnWantToRead"
-            app:layout_constraintTop_toBottomOf="@+id/btnWantToRead" android:layout_marginTop="5dp"
-            android:backgroundTint="#9ADF4A"/>
-    <Button
-            android:text="O programie"
-            android:layout_width="360dp"
-            android:layout_height="50dp"
-            android:id="@+id/btnAbout"
-            android:textAllCaps="false" app:layout_constraintStart_toStartOf="@+id/btnFavorite"
-            app:layout_constraintEnd_toEndOf="@+id/btnFavorite" app:layout_constraintTop_toBottomOf="@+id/btnFavorite"
-            android:layout_marginTop="5dp" android:backgroundTint="#9ADF4A"/>
+            app:srcCompat="@drawable/ic_add" />
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:paddingTop="?attr/actionBarSize"
+            android:layout_width="409dp"
+            android:layout_height="729dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
-            android:layout_width="196dp"
-            android:layout_height="193dp"
-            android:id="@+id/imgLogo"
-            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/empty_imageview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="230dp"
+            android:alpha="0.1"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="15dp"
-            android:src="@mipmap/ikon_book"
-    />
+            app:srcCompat="@drawable/ic_empty" />
 
     <TextView
-            android:text="Program Januszex-POL spółka Zoo"
+            android:id="@+id/no_data"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/txtLicence"
-            android:textStyle="italic"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="5dp"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="No Data."
+            android:textSize="20sp"
+            android:alpha="0.4"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/empty_imageview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
