--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#4CAF50</color>
     <color name="colorPrimaryDark">#38813B</color>
     <color name="colorAccent">#FF5722</color>
-    <color name="Pink">#E91E63</color>
+    <color name="red">#E91E63</color>
     <color name="Yellow">#E6D115</color>
+
 </resources>
